--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DSKORD-GAME</title>
-    <link href="/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    </head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Copied layout for Caleb</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-    <div class="container-fluid p-5 bg-primary text-white text-center">
-       <h1 class="animate-charcter">DSKORD</h1>
-        <p>Anarchism-Game</p>
-      </div>
-      
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-sm-4">
-            <h3>PHASE 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+  <main>
+    <section>
+      <div class="container">
+        <div class="feature-grid-container grid grid--columns">
+          <div class="feature-grid-text">
+            <h2 class="fs-700 uppercase text-compressed">WITH XFAI, TRADING WILL <span class="text-primary">NEVER</span>
+              HAVE TO
+              REMAIN CENTRALIZED</h2>
+            <p>XFai develops tooling by graphing the DeFi space to build <strong>game changing</strong> products to
+              benefit
+              users</p>
+            <div class="flex large-gap">
+              <a href="#" class="btn btn--primary uppercase">Whitepaper</a>
+              <a href="#" class="btn btn--accent uppercase">Watch video</a>
+            </div>
           </div>
-          <div class="col-sm-4">
-            <h3>Column 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+          <div class="grid feature-grid">
+            <a href="#" aria-label="Low fees"><img src="images/Fees.png" alt=""></a>
+            <a href="#" aria-label="DLO-Brick"><img src="images/Brick.png" alt=""></a>
+            <a href="#" aria-label="Safe and simple"><img src="images/Safe.png" alt=""></a>
+            <a href="#" aria-label="Synthetic curve"><img src="images/Sythetic.png" alt=""></a>
+            <a href="#" aria-label="Anti slippage"><img src="images/Anti.png" alt=""></a>
+            <a href="#" aria-label="Dex liquidity oracle"><img src="images/DLO.png" alt=""></a>
+            <a href="#" aria-label="Liquidity difference force multiplier"><img src="images/Force.png" alt=""></a>
           </div>
-          <div class="col-sm-4">
-            <h3>Column 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-          </div>
+
         </div>
-      </div>
-       
+    </section>
+  </main>
 </body>
+
 </html>
